image gub update

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <!-- Image Content -->
     <div class="relative mt-10 md:mt-0 w-full max-w-sm sm:max-w-md md:max-w-lg lg:max-w-xl">
-      <img src="/images/image.png" alt="Launching Soon Visual" class="w-full h-auto object-contain" />
+      <img src="images/image.png" />
     </div>
 
   </div>
