--- a/index.html
+++ b/index.html
@@ -80,15 +80,16 @@
 
         <!-- Hero section -->
         <div id="about" class="hero-section">
-            <div class="container text-center">
-                <div class="row">
-                    <div class="col-12">
-                        <h1 class="hero-heading fw-bold mb-0 stroke-text" style="font-size: 4.5rem; padding: 20px;">
-                            SINGAMSETTI POORNA MANI TEJA</h1>
-                    </div>
-                </div><!-- end row -->
-            </div><!-- end container -->
-        </div>
+    <div class="container text-center">
+        <div class="row">
+            <div class="col-12">
+                <h1 class="hero-heading fw-bold mb-0 stroke-text fs-1 fs-md-3">
+                    SINGAMSETTI POORNA MANI TEJA
+                </h1>
+            </div>
+        </div><!-- end row -->
+    </div><!-- end container -->
+</div>
         <!-- end Hero section -->
 
         <!-- About section -->
@@ -783,7 +784,7 @@
                         <div class="row g-4 g-lg-5">
                             <div class="col-12 col-md-6">
                                 <h6 class="sm-heading">Email:</h6>
-                                <h3 class="mb-0">Spmteja09@gmail.comt</h3>
+                                <h3 class="mb-0">Spmteja09@gmail.com</h3>
                             </div>
                             <div class="col-12 col-md-6">
                                 <h6 class="sm-heading">Call:</h6>
