--- a/index.html
+++ b/index.html
@@ -135,13 +135,13 @@
                                 </li>
                                 <li>
                                     <a class="button-circle button-circle-sm"
-                                        href="https://www.instagram.com/_spm_teja_/">
+                                        href="https://x.com/spmteja1">
                                         <i class='bx bxl-twitter'></i>
                                         <i class='bx bxl-twitter'></i>
                                     </a>
                                 </li>
                                 <li>
-                                    <a class="button-circle button-circle-sm" href="https://x.com/spmteja1">
+                                    <a class="button-circle button-circle-sm" href="https://www.instagram.com/_spm_teja_/">
                                         <i class='bx bxl-instagram'></i>
                                         <i class='bx bxl-instagram'></i>
                                     </a>
