--- a/index.html
+++ b/index.html
@@ -32,8 +32,16 @@
             <div class="header-wrapper">
                 <!-- Header Logo -->
                 <div class="header-logo">
-                    <h2>Singamsetti Poorna Mani Teja</h2>
+                    <h2 style="font-size: 2rem;" class="header-title">Singamsetti Poorna Mani Teja</h2>
                 </div>
+
+                <style>
+                    @media (max-width: 768px) {
+                        .header-title {
+                            font-size: 1.25rem !important;
+                        }
+                    }
+                </style>
                 <!-- Header Nav -->
                 <div class="header-nav">
                     <a class="button button-sm button-dot me-2 me-lg-3" href="#contact">
@@ -80,16 +88,16 @@
 
         <!-- Hero section -->
         <div id="about" class="hero-section">
-    <div class="container text-center">
-        <div class="row">
-            <div class="col-12">
-                <h1 class="hero-heading fw-bold mb-0 stroke-text fs-1 fs-md-3">
-                    SINGAMSETTI POORNA MANI TEJA
-                </h1>
-            </div>
-        </div><!-- end row -->
-    </div><!-- end container -->
-</div>
+            <div class="container text-center">
+                <div class="row">
+                    <div class="col-12">
+                        <h1 class="hero-heading fw-bold mb-0 stroke-text fs-1 fs-md-3">
+                            SINGAMSETTI POORNA MANI TEJA
+                        </h1>
+                    </div>
+                </div><!-- end row -->
+            </div><!-- end container -->
+        </div>
         <!-- end Hero section -->
 
         <!-- About section -->
@@ -134,14 +142,14 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a class="button-circle button-circle-sm"
-                                        href="https://x.com/spmteja1">
+                                    <a class="button-circle button-circle-sm" href="https://x.com/spmteja1">
                                         <i class='bx bxl-twitter'></i>
                                         <i class='bx bxl-twitter'></i>
                                     </a>
                                 </li>
                                 <li>
-                                    <a class="button-circle button-circle-sm" href="https://www.instagram.com/_spm_teja_/">
+                                    <a class="button-circle button-circle-sm"
+                                        href="https://www.instagram.com/_spm_teja_/">
                                         <i class='bx bxl-instagram'></i>
                                         <i class='bx bxl-instagram'></i>
                                     </a>
@@ -282,8 +290,8 @@
                                         <!-- Caption -->
                                         <h2>
                                             <a class="portfolio-caption" href="#">
-                                                <i class='bx bx-right-arrow-alt' ></i>
-                                                Domain-Intelligence-Tool 
+                                                <i class='bx bx-right-arrow-alt'></i>
+                                                Domain-Intelligence-Tool
                                             </a>
                                         </h2>
                                     </div>
@@ -315,7 +323,7 @@
                                         <!-- Caption -->
                                         <h2>
                                             <a class="portfolio-caption" href="#">
-                                               <i class='bx bx-right-arrow-alt' ></i>
+                                                <i class='bx bx-right-arrow-alt'></i>
                                                 Hackattack | Hackathon
                                             </a>
                                         </h2>
@@ -353,8 +361,8 @@
                                         <!-- Caption -->
                                         <h2>
                                             <a class="portfolio-caption" href="#">
-                                                <i class='bx bx-right-arrow-alt' ></i>
-                                               Web Resource Downloader
+                                                <i class='bx bx-right-arrow-alt'></i>
+                                                Web Resource Downloader
                                             </a>
                                         </h2>
                                     </div>
@@ -386,15 +394,15 @@
                                         <!-- Caption -->
                                         <h2>
                                             <a class="portfolio-caption" href="#">
-                                                <i class='bx bx-right-arrow-alt' ></i>
-                                               IP Location Finder
+                                                <i class='bx bx-right-arrow-alt'></i>
+                                                IP Location Finder
                                             </a>
                                         </h2>
                                     </div>
                                 </div><!-- end portfolio-box -->
                             </div>
                             <!-- end Slider Item 4 -->
-                             <!-- Slider Item 5 -->
+                            <!-- Slider Item 5 -->
                             <div class="swiper-slide">
                                 <div class="portfolio-box">
                                     <!-- Image -->
@@ -420,7 +428,7 @@
                                         <!-- Caption -->
                                         <h2>
                                             <a class="portfolio-caption" href="#">
-                                                <i class='bx bx-right-arrow-alt' ></i>
+                                                <i class='bx bx-right-arrow-alt'></i>
                                                 File Metadata Extractor
                                             </a>
                                         </h2>
@@ -428,7 +436,7 @@
                                 </div><!-- end portfolio-box -->
                             </div>
                             <!-- end Slider Item 5 -->
-                             <!-- Slider Item 6 -->
+                            <!-- Slider Item 6 -->
                             <div class="swiper-slide">
                                 <div class="portfolio-box">
                                     <!-- Image -->
@@ -454,7 +462,7 @@
                                         <!-- Caption -->
                                         <h2>
                                             <a class="portfolio-caption" href="#">
-                                                <i class='bx bx-right-arrow-alt' ></i>
+                                                <i class='bx bx-right-arrow-alt'></i>
                                                 Visual Art of Cubes
                                             </a>
                                         </h2>
@@ -469,7 +477,7 @@
         </div>
         <!-- end Portfolio section -->
 
-       <!-- Experience section -->
+        <!-- Experience section -->
         <div id="experience" class="section pb-0">
             <div class="container">
                 <div class="row g-4 g-xl-5">
@@ -484,7 +492,8 @@
                                 <div class="fancy-box">
                                     <h4>Intern - The Red Users</h4>
                                     <h6 class="sm-heading text-white-04 mb-2">May 2025 - Present (2 months)</h6>
-                                    <p>Working as an intern in India, contributing to cybersecurity projects with a focus on ethical hacking and system security.</p>
+                                    <p>Working as an intern in India, contributing to cybersecurity projects with a
+                                        focus on ethical hacking and system security.</p>
                                 </div>
                             </div>
                             <!-- Experience box 2 -->
@@ -492,7 +501,8 @@
                                 <div class="fancy-box">
                                     <h4>Intern - Sytech Labs Pvt. Ltd</h4>
                                     <h6 class="sm-heading text-white-04 mb-2">April 2025 - Present (3 months)</h6>
-                                    <p>Engaged in cybersecurity tasks in Hyderabad, Telangana, India, gaining hands-on experience in secure system analysis and threat scenarios.</p>
+                                    <p>Engaged in cybersecurity tasks in Hyderabad, Telangana, India, gaining hands-on
+                                        experience in secure system analysis and threat scenarios.</p>
                                 </div>
                             </div>
                             <!-- Experience box 3 -->
@@ -500,7 +510,9 @@
                                 <div class="fancy-box">
                                     <h4>Cybersecurity Intern - SytechLabs</h4>
                                     <h6 class="sm-heading text-white-04 mb-2">April 2025 - May 2025 (1 month)</h6>
-                                    <p>Completed a one-month internship focused on ethical hacking, penetration testing, and vulnerability assessment using tools like Nmap, Wireshark, and Metasploit.</p>
+                                    <p>Completed a one-month internship focused on ethical hacking, penetration testing,
+                                        and vulnerability assessment using tools like Nmap, Wireshark, and Metasploit.
+                                    </p>
                                 </div>
                             </div>
                             <!-- Experience box 4 -->
@@ -508,7 +520,8 @@
                                 <div class="fancy-box">
                                     <h4>Webmaster - HTBAU</h4>
                                     <h6 class="sm-heading text-white-04 mb-2">August 2024 - Present (11 months)</h6>
-                                    <p>Designed, developed, and maintained the HTBAU website, ensuring responsive design, secure authentication, and optimized UI/UX.</p>
+                                    <p>Designed, developed, and maintained the HTBAU website, ensuring responsive
+                                        design, secure authentication, and optimized UI/UX.</p>
                                 </div>
                             </div>
                             <!-- end Experience box 4 -->
@@ -527,7 +540,8 @@
                         <div class="col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2">
                             <span class="title-heading text-white-04">Credentials</span>
                             <h1 class="display-3 fw-medium">Certi<span class="text-gradient">ficates</span></h1>
-                            <p>Showcasing my professional certifications earned through dedication and skill development in cybersecurity, cloud computing, and programming.</p>
+                            <p>Showcasing my professional certifications earned through dedication and skill development
+                                in cybersecurity, cloud computing, and programming.</p>
                             <!-- Slider Nav -->
                             <div class="mt-4">
                                 <div class="swiper-blog-prev button-circle cursor-link">
@@ -649,7 +663,7 @@
                                         <h2 class="mb-0">
                                             <a class="blog-caption" href="#">
                                                 <i class='bx bx-chevrons-right'></i>
-                                                 AWS Academy Graduate - AWS Academy Cloud Foundations
+                                                AWS Academy Graduate - AWS Academy Cloud Foundations
                                             </a>
                                         </h2>
                                     </div>
@@ -674,7 +688,8 @@
                                         <ul class="list-inline-dot sm-heading text-white mb-2">
                                             <li>
                                                 <a class="link-hover" href="#">
-                                                    <span data-text="by Cisco Networking Academy">by Cisco Networking Academy</span>
+                                                    <span data-text="by Cisco Networking Academy">by Cisco Networking
+                                                        Academy</span>
                                                 </a>
                                             </li>
                                             <li>
@@ -723,7 +738,7 @@
                                         <h2 class="mb-0">
                                             <a class="blog-caption" href="#">
                                                 <i class='bx bx-chevrons-right'></i>
-                                              TEJAS 2K25 Participation - SAR Image Colorization Using Deep Learning
+                                                TEJAS 2K25 Participation - SAR Image Colorization Using Deep Learning
                                             </a>
                                         </h2>
                                     </div>
@@ -760,7 +775,8 @@
                                         <h2 class="mb-0">
                                             <a class="blog-caption" href="#">
                                                 <i class='bx bx-chevrons-right'></i>
-                                               TEJAS 2K25 Achievement - Collision Avoidance & Path Finding for Travel on Space
+                                                TEJAS 2K25 Achievement - Collision Avoidance & Path Finding for Travel
+                                                on Space
                                             </a>
                                         </h2>
                                     </div>
@@ -793,7 +809,7 @@
                         </div><!-- end row(inner) -->
                     </div>
                 </div><!-- end row -->
-             </div><!-- end container -->
+            </div><!-- end container -->
         </div>
         <!-- end Contact section -->
 
@@ -808,8 +824,8 @@
     <!-- Scroll To Top -->
     <div class="scrolltotop">
         <a class="button-circle" href="#">
-           <i class='bx bx-up-arrow-alt' ></i>
-            <i class='bx bx-up-arrow-alt' ></i>
+            <i class='bx bx-up-arrow-alt'></i>
+            <i class='bx bx-up-arrow-alt'></i>
         </a>
     </div>
     <!-- end Scroll To Top -->
