--- a/index.html
+++ b/index.html
@@ -58,20 +58,20 @@
                                 <a class="nav-link" href="#about"><i class='bx bx-chevrons-right'></i>About</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#services"><i class='bx bx-chevrons-right'></i>Services</a>
+                                <a class="nav-link" href="#services"><i class='bx bx-chevrons-right'></i>Education</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#portfolio"><i class='bx bx-chevrons-right'></i>Project</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#awards"><i class='bx bx-chevrons-right'></i>Awards</a>
+                                <a class="nav-link" href="#experience"><i class='bx bx-chevrons-right'></i>Experience</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#blog"><i class='bx bx-chevrons-right'></i>Certificates</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#testimonial"><i
-                                        class='bx bx-chevrons-right'></i>Testimonial</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#blog"><i class='bx bx-chevrons-right'></i>Blog</a>
+                                        class='bx bx-chevrons-right'></i>Gallary</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#contact"><i class='bx bx-chevrons-right'></i>Contact</a>
