--- a/index.html
+++ b/index.html
@@ -4,21 +4,20 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="keywords" content="">
-    <title>Singamsetti Poorna Mani Teja- Personal Portfolio Template</title>
-    <!-- Favicon -->
+    <meta name="description" content="Personal portfolio of Singansetti Poorna Mani Teja">
+    <meta name="keywords" content="portfolio, personal, developer">
+    <meta http-equiv="X-XSS-Protection" content="1; mode=block">
+    <meta http-equiv="Strict-Transport-Security" content="max-age=31536000; includeSubDomains">
+     <title>Singansetti Poorna Mani Teja - Personal Portfolio</title>
     <link href="assets/images/favicon.png" rel="shortcut icon">
-    <!-- CSS -->
-    <link href="assets/plugins/bootstrap/bootstrap.min.css" rel="stylesheet">
-    <link href="assets/plugins/magnific-popup/magnific-popup.min.css" rel="stylesheet">
-    <link href="assets/plugins/swiper/swiper-bundle.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"  crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/magnific-popup@1.1.0/dist/magnific-popup.css" rel="stylesheet"  crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/swiper@11.1.9/swiper-bundle.min.css" rel="stylesheet"  crossorigin="anonymous">
     <link href="assets/css/theme.min.css" rel="stylesheet">
-    <!-- Fonts/Icons -->
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link href="assets/plugins/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-    <link href="assets/plugins/fontawesome/css/all.css" rel="stylesheet">
-</head>
+    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet"  crossorigin="anonymous">
+    <link href="assets/plugins/bootstrap/icons/bootstrap-icons.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" rel="stylesheet"  crossorigin="anonymous">
+  </head>
 
 <body data-preloader="true">
 
@@ -834,7 +833,7 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBi4SV0ZRVGoIDH2E00YtJ8Gvg67eaPG5A"></script>
     <script src="assets/plugins/jquery.min.js"></script>
     <script src="assets/plugins/plugins.js"></script>
-    <script src="assets/js/functions.min.js"></script>
+     <script src="assets/js/functions.min.js"></script>
 </body>
 
 </html>
