potfolio bi update

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     <div class="row g-4 g-lg-5">
                         <div class="col-12 col-md-4 col-lg-12">
                             <h6 class="sm-heading">Biography</h6>
-                            <p>I'm a 3rd-year B.Tech Cybersecurity student at Anurag University, Uppal, Telangana,
+                            <p>I'm a 4th-year B.Tech Cybersecurity student at Anurag University, Uppal, Telangana,
                                 passionate about ethical hacking.
                                 With experience from internships and projects, I've developed skills in ethical hacking,
                                 penetration testing, and network security.
