--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 <div class="col-12 col-lg-4 order-lg-2 text-center">
                     <!-- Hero Avatar -->
                     <div class="hero-avatar">
-                        <img src="/assets/images/teja.jpg" data-rjs="2" alt="">
+                        <img src="/assets/images/teja2.jpg" data-rjs="2" alt="">
                     </div>
                     <!-- end Hero Avatar -->
                 </div>
