--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
                                 <a class="nav-link" href="#blog"><i class='bx bx-chevrons-right'></i>Certificates</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#testimonial"><i
-                                        class='bx bx-chevrons-right'></i>Gallary</a>
+                                <a class="nav-link" href="/S. Poorna Mani Teja.pdf"><i
+                                        class='bx bx-chevrons-right'></i>Download Resume</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#contact"><i class='bx bx-chevrons-right'></i>Contact</a>
